@startuml Triplex Archi Diagram
title "Triplex Archi Diagram"
class AchievementStorage<<Services>> {
    + AchievementStorage singleton
    .. For achievements ..
    + Future<List<Achievement>> loadAchievements()
    + Future<void> saveAchievements(List<Achievement> achievements)
    + Future<void> updateAchievementProgress(String title, int newProgress, {bool forceUnlock = false})
    + Future<void> clearAchievements()
    .. For statistics ..
    + Future<Map<String, dynamic>> getAchievementStats()
    + Future<void> updateStats(Map<String, dynamic> newStats)
}

class Homepage {
    + createState() : _HomepageState
}

class Achievement<<models>>{
    + String title
    + String description
    + String emoji
    + AchievementType type
    + Map<String, dynamic> criteria
    + int maxProgress
    + int currentProgress
}

Homepage --> AchievementStorage : uses
Homepage --> Achievement : reads
AchievementStorage -> Achievement : manages

@enduml